tests/baselines/reference/objectTypeWithDuplicateNumericProperty.errors.txt
==== tests/cases/compiler/objectTypeWithDuplicateNumericProperty.ts (12 errors) ====
    // numeric properties must be distinct after a ToNumber operation
    // so the below are all errors
    
    class C {
        1;
        1.0;
        ~~~
!!! objectTypeWithDuplicateNumericProperty.ts(6,5): error TS2000: Duplicate identifier '1.0'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(5,5)
        1.;
        ~~
!!! objectTypeWithDuplicateNumericProperty.ts(7,5): error TS2000: Duplicate identifier '1.'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(5,5)
        1.00;
        ~~~~
!!! objectTypeWithDuplicateNumericProperty.ts(8,5): error TS2000: Duplicate identifier '1.00'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(5,5)
    }
    
    interface I {
        1;
        1.0;
        ~~~
!!! objectTypeWithDuplicateNumericProperty.ts(13,5): error TS2000: Duplicate identifier '1.0'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(12,5)
        1.;
        ~~
!!! objectTypeWithDuplicateNumericProperty.ts(14,5): error TS2000: Duplicate identifier '1.'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(12,5)
        1.00;
        ~~~~
!!! objectTypeWithDuplicateNumericProperty.ts(15,5): error TS2000: Duplicate identifier '1.00'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(12,5)
    }
    
    var a: {
        1;
        1.0;
        ~~~
!!! objectTypeWithDuplicateNumericProperty.ts(20,5): error TS2000: Duplicate identifier '1.0'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(19,5)
        1.;
        ~~
!!! objectTypeWithDuplicateNumericProperty.ts(21,5): error TS2000: Duplicate identifier '1.'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(19,5)
        1.00;
        ~~~~
!!! objectTypeWithDuplicateNumericProperty.ts(22,5): error TS2000: Duplicate identifier '1.00'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(19,5)
    }
    
    var b = {
        1: 1,
        1.0: 1,
        ~~~~~~
!!! objectTypeWithDuplicateNumericProperty.ts(27,5): error TS2000: Duplicate identifier '1.0'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(26,5)
        1.: 1,
        ~~~~~
!!! objectTypeWithDuplicateNumericProperty.ts(28,5): error TS2000: Duplicate identifier '1.'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(27,5)
        1.00: 1
        ~~~~~~~
!!! objectTypeWithDuplicateNumericProperty.ts(29,5): error TS2000: Duplicate identifier '1.00'. Additional locations:
!!! 	objectTypeWithDuplicateNumericProperty.ts(28,5)
    }
    
    